<resources>

    <string name="app_name">WebColeta</string>

    <string name="search_button">Busca</string>
    <string name="list_button">Busca</string>

    <string name="list_empty_text">Não foram encontrados pontos de coleta</string>
    <string name="dialog_wait_title">Aguarde...</string>
    <string name="dialog_wait_message">Carregando informações.</string>
    <string name="connection_exception">Erro ao conectar ao servidor. Tente novamente mais tarde.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="list_header_text">Locais</string>

    <string name="shift_button">Turno</string>
    <string name="sector_button">Setor</string>

    <string name="sector_choose">Escolha um setor: </string>
    <string name="sector_a">A</string>
    <string name="sector_b">B</string>
    <string name="sector_c">C</string>


    <string name="list_hint_text">Busque aqui o nome da rua</string>

    <string name="action_route">Traçar rota</string>

    <plurals name="list_header_plural">
        <item quantity="one">1 lugar</item>
        <item quantity="other">%d lugares</item>
    </plurals>

    <string name="google_maps_key">AIzaSyDZfaNElJpjVWONnKNUf-i2FXYNQR5UKNY</string>

    <string name="title_garbage_place_detail">Detalhes do Ponto de Coleta</string>

    <string name="gpd_street">Nome da rua</string>
    <string name="gpd_interval">Horário</string>
    <string name="gpd_frequency">Frequencia</string>
    <string name="gpd_register">Deseja cadastrar este ponto de coleta para receber notificações?</string>
    <string name="gpd_button_register">Sim</string>
    <string name="gpd_button_cancel">Não</string>

    <string name="title_register_notification">Registrar Notificação</string>

    <string name="rn_text">Deseja ser avisado com quanto tempo de antecedência?</string>
    <string name="rn_time_1">15 minutos</string>
    <string name="rn_time_2">30 minutos</string>
    <string name="rn_time_3">1 hora</string>
    <string name="rn_button_ok">Registrar</string>
    <string name="rn_button_cancel">Cancelar</string>
    <string name="rn_msg_sucess">Sua preferência foi salva com sucesso!</string>

    <string name="title_notification">Notificação de Coleta</string>
    <string name="n_message_1">O caminhão da coleta seletiva vai passar</string>
    <string name="n_time_text">Em: </string>
    <string name="n_minute_text">minutos. </string>
    <string name="n_street_text">Na rua: </string>
    <string name="n_message_2">A frequência do caminhão é: </string>

    <string name="notification_alert">Aviso de coleta</string>


</resources>
